renew schhuang kosuch

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="section-info">
                         <div class="sub-title-paragraph">
                             <h4>Prof. Dr. Siehchuen Huang</h4>
-                            <h5>If you have right set of mind and thus you can rule the world. Cheers!</h5>
+                            <h5>This is the first time I organized an interdisciplinary and international seminar with three intelligent and thoughtful collegues. We explored several topics on decision-making and went through meaningful discussions together. I really appreciate this experience.</h5>
                             <p>Sieh-Chuen Huang is a professor of civil law, the College of Law at NTU. She received her BA of Laws from NTU, Taiwan and the MA, Ph.D. from Hokkaido University, Japan. Her research interests on <b>family law, guardianship, trusts and estates, and
                                     intergenerational property transfer in aged society.</b> And also <b>legal
                                     analytics, machine learning and AI in law.</b>
@@ -146,7 +146,7 @@
                                 mental self-regulation and serenity promotion.
                             </p>
                         </div>
-                        <a href="http://homepage.ntu.edu.tw/~schhuang/English.html" class="anchor-btn">more about <i
+                        <a href="https://www.th-koeln.de/personen/renate.kosuch/" class="anchor-btn">more about <i
                                 class="fas fa-arrow-right pd-lt-10"></i></a>
                     </div>
                 </div>
@@ -595,7 +595,7 @@
                         <div class="icon-text">
                             <h4 class="title-box">Website Maker</h4>
                             <p>Website Architect and Script Maneger: <i><b>Hsuanlei Shao</b></i></p>
-                            <p>Html and Special Effects and Design: <i><b>Tzuying Yang、Chihchuan Fan</b></i></p>
+                            <p>Html, Special Effects and Design: <i><b>Tzuying Yang、Chihchuan Fan</b></i></p>
                         </div>
                     </div>
                 </div>
