--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:url" content="https://ntnu-lab.github.io/ufo_web/images/digikeys.webp" />
+    <meta property="og:image" content="https://ntnu-lab.github.io/ufo_web/images/digikeys.webp" />
     <meta property="og:title" content="Interdisciplinary Seminar on Decision-Making in Persons with Disabilities" />
 
 </head>
