--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
                             <h4>Prof. Dr. Siehchuen Huang</h4>
                             <h5>This is the first time I organized an interdisciplinary and international seminar with three intelligent and thoughtful collegues. We explored several topics on decision-making and went through meaningful discussions together. I really appreciate this experience.</h5>
                             <p>Sieh-Chuen Huang is a professor of civil law, the College of Law at NTU. She received her BA of Laws from NTU, Taiwan and the MA, Ph.D. from Hokkaido University, Japan. Her research interests on <b>family law, guardianship, trusts and estates, and
-                                    intergenerational property transfer in aged society.</b> And also <b>legal
-                                    analytics, machine learning and AI in law.</b>
+                                    intergenerational property transfer in aged society,</b> and also <b>legal analytics, machine learning and AI in law.</b>
                             </p>
                         </div>
                         <a href="http://homepage.ntu.edu.tw/~schhuang/English.html" class="anchor-btn">more about <i
@@ -305,6 +304,75 @@
         </div>
     </div>
     <!-- End Services -->
+
+    <!-- Testimonials -->
+    <div class="testimonials">
+        <div class="testimonials-overlay section-padding">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-10 offset-md-1">
+                        <div class="owl-carousel owl-theme">
+                            <div class="testimonial-item text-center">
+                                <div class="icon"> <i class="fas fa-comments"></i> </div>
+                                <p class="m-auto">
+                                    This is one of the few opportunities I have had in my four-year college experience to speak my mind and advocate for a right to disability convention.</p>
+                                <p class="m-auto">這是少數我能在大學四年內的經歷裡暢談自我主見，主張障權公約的機會。</p>
+                                <p class="m-auto">Dies ist eine der wenigen Gelegenheiten, die ich in meiner vierjährigen College-Erfahrung hatte, meine Meinung zu äußern und mich für eine Konvention zum Recht auf Behinderung einzusetzen.</p>
+                                <div class="testimonial-author text-center">
+                                    <h5>Da-wei Lin</h5>
+                                    <h6>Dept. of Law, the "German law of Betreuung" Group, Taiwanese, A Physically Challenged Person</h6>
+                                </div>
+                            </div>
+                            <div class="testimonial-item text-center">
+                                <div class="icon"> <i class="fas fa-comments"></i> </div>
+                                <p class="m-auto">I realise that the most essential skill of communication with people with mental disability is “patience”.
+                                </p>
+                                <p class="m-auto">我意識到「耐心」是與精神障礙者溝通的基本技巧。</p>
+                                <p class="m-auto">Mir ist klar, dass die wichtigste Fähigkeit der Kommunikation mit Menschen mit geistiger Behinderung „Geduld“ ist.</p>
+                                <div class="testimonial-author text-center">
+                                    <h5>Pin-Yue Sung</h5>
+                                    <h6>College of Law, the "Family Planning" Group, Taiwanese</h6>
+                                </div>
+                            </div>
+                            <div class="testimonial-item text-center">
+                                <div class="icon"> <i class="fas fa-comments"></i> </div>
+                                <p class="m-auto">No matter where you are, you can bring the empathy and
+                                    A person-centered approach, helping everyone in need and bringing more warmth to the world.</p>
+                                <p class="m-auto">無論大家到了什麼樣的位置，也能帶著在這堂課上所學到的同理心以及person-centered approach，幫助遇到的每一個需要幫助的人，帶給這個世界更多溫暖。</p>
+                                <p class="m-auto">Egal wo Sie sind, Sie können die Empathie mitbringen und
+                                    Ein personenzentrierter Ansatz, der allen in Not hilft und der Welt mehr Wärme bringt.</p>
+                                <div class="testimonial-author text-center">
+                                    <h5>Hsiao-Chun Lu</h5>
+                                    <h6>Dept. Foreign language, the "How to Help Tina? SDM in people with dementia" Group, Taiwanese</h6>
+                                </div>
+                            </div>
+                            <div class="testimonial-item text-center">
+                                <div class="icon"> <i class="fas fa-comments"></i> </div>
+                                <p class="m-auto">This class well embodies the saying that "law can only show its vitality when it encounters specific cases". I must be a down-to-earth but professional legal person.</p>
+                                <p class="m-auto">這堂課很好地體現了「法律只有在遇見具體案例時才能展現出其生命力」這句話，我必須作一個接地氣但又專業的法律人。</p>
+                                <p class="m-auto">Dieser Kurs verkörpert gut das Sprichwort „Das Recht kann seine Vitalität nur zeigen, wenn es auf konkrete Fälle trifft.“ Ich muss eine bodenständige, aber professionelle juristische Person sein.</p>
+                                <div class="testimonial-author text-center">
+                                    <h5>Li, Yu-Lin</h5>
+                                    <h6>Graduate Institute of Interdisciplinary Legal Studies, the "Peter, a person under assistance in Taiwan & Germany" Group, Taiwanese</h6>
+                                </div>
+                            </div>
+                            <div class="testimonial-item text-center">
+                                <div class="icon"> <i class="fas fa-comments"></i> </div>
+                                <p class="m-auto">While looking for answers, we can accept the collision and friction of various viewpoints and positions with an open, empathetic, and diverse perspective.</p>
+                                <p class="m-auto">在找尋解答的同時，我們能用開放、同理、多元的角度來接受各種觀點、立場的碰撞摩擦。</p>
+                                <p class="m-auto">Auf der Suche nach Antworten können wir das Aufeinanderprallen und Reiben verschiedener Sichtweisen und Positionen mit einer offenen, empathischen und vielfältigen Perspektive akzeptieren.</p>
+                                <div class="testimonial-author text-center">
+                                    <h5>Hsin Jung Chun</h5>
+                                    <h6>Dept. Psychology, the "Residence and risk of homelessness" Group, Taiwanese</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Testimonials -->
 
     <!-- Gallery -->
     <div class="portfolio section-padding" data-scroll-index='3'>
@@ -530,75 +598,6 @@
         </div>
     </div>
     <!-- End Gallery -->
-
-    <!-- Testimonials -->
-    <div class="testimonials">
-        <div class="testimonials-overlay section-padding">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-10 offset-md-1">
-                        <div class="owl-carousel owl-theme">
-                            <div class="testimonial-item text-center">
-                                <div class="icon"> <i class="fas fa-comments"></i> </div>
-                                <p class="m-auto">I realise that the most essential skill of communication with people with mental disability is “patience”.
-                                </p>
-                                <p class="m-auto">我意識到「耐心」是與精神障礙者溝通的基本技巧。</p>
-                                <p class="m-auto">Mir ist klar, dass die wichtigste Fähigkeit der Kommunikation mit Menschen mit geistiger Behinderung „Geduld“ ist.</p>
-                                <div class="testimonial-author text-center">
-                                    <h5>Pin-Yue Sung</h5>
-                                    <h6>College of Law, the "Family Planning" Group, Taiwanese</h6>
-                                </div>
-                            </div>
-                            <div class="testimonial-item text-center">
-                                <div class="icon"> <i class="fas fa-comments"></i> </div>
-                                <p class="m-auto">No matter where you are, you can bring the empathy and
-                                    A person-centered approach, helping everyone in need and bringing more warmth to the world.</p>
-                                <p class="m-auto">無論大家到了什麼樣的位置，也能帶著在這堂課上所學到的同理心以及person-centered approach，幫助遇到的每一個需要幫助的人，帶給這個世界更多溫暖。</p>
-                                <p class="m-auto">Egal wo Sie sind, Sie können die Empathie mitbringen und
-                                    Ein personenzentrierter Ansatz, der allen in Not hilft und der Welt mehr Wärme bringt.</p>
-                                <div class="testimonial-author text-center">
-                                    <h5>Hsiao-Chun Lu</h5>
-                                    <h6>Dept. Foreign language, the "How to Help Tina? SDM in people with dementia" Group, Taiwanese</h6>
-                                </div>
-                            </div>
-                            <div class="testimonial-item text-center">
-                                <div class="icon"> <i class="fas fa-comments"></i> </div>
-                                <p class="m-auto">This class well embodies the saying that "law can only show its vitality when it encounters specific cases". I must be a down-to-earth but professional legal person.</p>
-                                <p class="m-auto">這堂課很好地體現了「法律只有在遇見具體案例時才能展現出其生命力」這句話，我必須作一個接地氣但又專業的法律人。</p>
-                                <p class="m-auto">Dieser Kurs verkörpert gut das Sprichwort „Das Recht kann seine Vitalität nur zeigen, wenn es auf konkrete Fälle trifft.“ Ich muss eine bodenständige, aber professionelle juristische Person sein.</p>
-                                <div class="testimonial-author text-center">
-                                    <h5>Li, Yu-Lin</h5>
-                                    <h6>Graduate Institute of Interdisciplinary Legal Studies, the "Peter, a person under assistance in Taiwan & Germany" Group, Taiwanese</h6>
-                                </div>
-                            </div>
-                            <div class="testimonial-item text-center">
-                                <div class="icon"> <i class="fas fa-comments"></i> </div>
-                                <p class="m-auto">While looking for answers, we can accept the collision and friction of various viewpoints and positions with an open, empathetic, and diverse perspective.</p>
-                                <p class="m-auto">在找尋解答的同時，我們能用開放、同理、多元的角度來接受各種觀點、立場的碰撞摩擦。</p>
-                                <p class="m-auto">Auf der Suche nach Antworten können wir das Aufeinanderprallen und Reiben verschiedener Sichtweisen und Positionen mit einer offenen, empathischen und vielfältigen Perspektive akzeptieren.</p>
-                                <div class="testimonial-author text-center">
-                                    <h5>Hsin Jung Chun</h5>
-                                    <h6>Dept. Psychology, the "Residence and risk of homelessness" Group, Taiwanese</h6>
-                                </div>
-                            </div>
-                            <div class="testimonial-item text-center">
-                                <div class="icon"> <i class="fas fa-comments"></i> </div>
-                                <p class="m-auto">
-                                    This is one of the few opportunities I have had in my four-year college experience to speak my mind and advocate for a right to disability convention.</p>
-                                <p class="m-auto">這是少數我能在大學四年內的經歷裡暢談自我主見，主張障權公約的機會。</p>
-                                <p class="m-auto">Dies ist eine der wenigen Gelegenheiten, die ich in meiner vierjährigen College-Erfahrung hatte, meine Meinung zu äußern und mich für eine Konvention zum Recht auf Behinderung einzusetzen.</p>
-                                <div class="testimonial-author text-center">
-                                    <h5>Da-wei Lin</h5>
-                                    <h6>Dept. of Law, the "German law of Betreuung" Group, Taiwanese, A Physically Challenged Person</h6>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Testimonials -->
 
     <!-- Contact -->
     <div class="contact section-padding" data-scroll-index='4'>
