--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         <div class="icon-text">
                             <h4 class="title-box">Residence and risk of homelessness</h4>
                             <h5>Madita Dickmeis,Inga Ueckermann,Verena Burke,Hsin Jung Chun,Huang An Yuan,Sun Yu Chien</h5>
-                            <a href="./homeworks/htmlfile/HW1.html" class="anchor-btn">See more <i
+                            <a href="./homeworks/HW1.pdf" class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
                     </div>
@@ -209,7 +209,7 @@
                         <div class="icon-text">
                             <h4 class="title-box">Peter, a person under assistance in Taiwan & Germany</h4>
                             <h5>Tien, Yu-Tzu, Li, Yu-Lin, Xie, Dai-Ling, Friederike Basten, Nicole Görtz, Julia Peetz, Melinda Titze</h5>
-                            <a href="./homeworks/htmlfile/HW2.html" class="anchor-btn">See more <i
+                            <a href="./homeworks/HW2.pdf" class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                         <div class="icon-text">
                             <h4 class="title-box">German law of “Betreuung”</h4>
                             <h5>Li-Wun Chiu, En-chia Kou, Da-wei Lin, Christian Eilermann, Ghina Pertsch, Anna Schmidt</h5>
-                            <a href="./homeworks/htmlfile/HW3.html" class="anchor-btn">See more <i
+                            <a href="./homeworks/HW3.pdf" class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
                     </div>
@@ -238,7 +238,7 @@
                             <h4 class="title-box">Health Care</h4>
                             <h5>Isabell Regier, Cassey Ler, Nadine Thomé, Miriam Klotz, Douglas Chen, Rike Möller, Lorenzo Tseng
                             </h5>
-                            <a href="./homeworks/htmlfile/HW4.html" class="anchor-btn">See more <i
+                            <a href="./homeworks/HW4.pdf" class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
                     </div>
@@ -255,7 +255,7 @@
                             <h4 class="title-box">How to Help Tina? SDM in people with dementia</h4>
                             <h5>Hsiao-Chun Lu, Ching-Yi Chen, Jia-Wei Cui, Celina Rosery, Jana Barbara, Judith Kinkel
                             </h5>
-                            <a href="./homeworks/htmlfile/HW5.html" class="anchor-btn">See more <i
+                            <a href="./homeworks/HW5.pdf" class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
                     </div>
@@ -267,7 +267,7 @@
                             </h4>
                             <h5>Marvin Büsselmann, Michaela Friedrich Chi-Jean Tang, Shao-Chia Li, Yi-Sheng Tseng
                             </h5>
-                            <a href="./homeworks/htmlfile/HW6.html" class="anchor-btn">See more <i
+                            <a href="./homeworks/HW6.pdf" class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
                     </div>
@@ -285,7 +285,7 @@
                         <div class="icon-text">
                             <h4 class="title-box">Family Planning I</h4>
                             <h5>Klara Gellrich , Anna Kallabis, Alena Stamler , Pei-Chi Tseng, Li-Chieh Wang , Pin-Yue Sung</h5>
-                            <a href="./homeworks/htmlfile/HW7.html" class="anchor-btn">See more <i
+                            <a href="./homeworks/HW7.pdf" class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
                     </div>
@@ -295,7 +295,7 @@
                         <div class="icon-text">
                             <h4 class="title-box">Family Planning II</h4>
                             <h5>Anne Birnbaum, Laura Sauer, Pia Baier, Syuan-Cing Huang, Su-Hsin Sun, Tai-Chen Hsiao.</h5>
-                            <a href="./homeworks/htmlfile/HW8.html" class="anchor-btn">See more <i
+                            <a href="./homeworks/HW8.pdf" class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
                     </div>
