--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
-        <div class="container"> <a class="navbar-brand navbar-logo" href="#"> NTU-TH Köln Co-teach, Interdisciplinary Seminar</a>
+        <div class="container" style="height: 80px;">
+            <!-- <p class="navbar-brand navbar-logo" href="#" style="background-image: url('./images/logo.png');width: 100px;"></p> -->
+            <img src="./images/logo.png" style="display: inline-block;
+            vertical-align: top;">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span
                     class="fas fa-bars"></span> </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
