--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>Interdisciplinary Seminar on Decision-Making in Persons with Disabilities</title>
+    <title>NTU Law</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
@@ -16,10 +16,10 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:url" content="https://ntnu-lab.github.io/ufo_web/images/digikeys.webp" />
     <meta property="og:image" content="https://ntnu-lab.github.io/ufo_web/images/digikeys.webp" />
-    <meta property="og:title" content="Interdisciplinary Seminar on Decision-Making in Persons with Disabilities" />
+    <meta property="og:title" content="Interdisciplinary Seminar on Decision-Making in Persons with Disabilities" /> -->
 
 </head>
 
