change logo width

--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
     <!-- End Navbar -->
 
     <!-- ======= video Section ======= -->
-    <div data-scroll-index='0'>
-        <section id="upper" style="height:20%;">
-            <div class="bg-video" style="transform: translateY(-5%);">
+    <div data-scroll-index='0' style="position: relatives;">
+        <section id="upper" style="height:20%;width:80%; position: relative;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,10%)">
+            <div class="bg-video">
                 <video class="bg-video__content" autoplay muted loop>
                     <source src="./images/highlight.mp4" type="video/mp4">
                 </video>
