--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section id="upper" style="height:20%;width:80%; position: relative;top: 50%; left: 50%;transform: translate(-50%,10%);">
             <div class="bg-video">
                 <video class="bg-video__content" autoplay muted loop>
-                    <source src="./images/highlight.mp4" type="video/mp4">
+                    <source src="./images/highlight.mp4" type="video/mp4" onerror="fallback(parentNode)">
                 </video>
             </div>
             <!-- <div class="container upper-content" data-aos="fade-up" data-aos-delay="100">
