--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div data-scroll-index='0' style="position: relatives;">
         <section id="upper" style="height:20%;width:80%; position: relative;top: 50%; left: 50%;transform: translate(-50%,10%);">
             <div class="bg-video">
-                <video class="bg-video__content" autoplay muted loop>
+                <video class="bg-video__content" autoplay muted loop playsinline>
                     <source src="./images/highlight.mp4" type="video/mp4" onerror="fallback(parentNode)">
                 </video>
             </div>
